# rastcomp

./: .gitignore  CMakeLists.txt  README.md  main.cc
gdal_compare/: rast_compare.py
